# Semesterwork_remote_computer

./: README.md
data_process/: controller_log_plot.py  navigation_plot.py
kube_config/: controller.yaml  game_pad_control_deploy.yaml  mapping.yaml  navigation.yaml  test.yaml
map/: map.pgm  map.yaml
script/: mem_listener.bash  mem_listenerk3s.bash  navigation_bare_metal.bash  navigation_container.bash  navigation_topic_listener.bash  ros_topic_logger_bare_metal.bash  ros_topic_logger_container.bash
src/car_description/: CMakeLists.txt  package.xml
src/car_description/src/description/: car_description.urdf
src/car_nav/: CMakeLists.txt  Dockerfile  Dockerfile.rviz  package.xml
src/car_nav/launch/: bringup_launch.py  navigation.launch.py  navigation_in_docker.launch.py
src/car_nav/maps/: map.pgm  map.yaml
src/car_nav/param/: car_nav2.yaml
src/car_slam/: CMakeLists.txt  Dockerfile  package.xml
src/car_slam/launch/: online_async_launch.py
src/car_slam/param/: mapper_params_localization.yaml  mapper_params_online_async.yaml  online_async_localization.yaml
src/controller/: Dockerfile  Dockerfile.keyboard  package.xml  setup.py
src/controller/controller/: game_pad.py  key_board.py  xbox.py
src/controller/launch/: control.launch.py  remote_control_pc.launch.py
src/laser2pcd/: CMakeLists.txt  package.xml
src/laser2pcd/src/: laser_convert.cpp
src/laser_imu_sync/: CMakeLists.txt  package.xml
src/laser_imu_sync/src/: sensor_data_synchronizer_node.cpp
src/lidar_odom_from_scratch/: CMakeLists.txt  Dockerfile
src/lidar_odom_from_scratch/launch/: lidar_odom.launch.py
src/mux_on_pc/: Dockerfile  package.xml  setup.cfg  setup.py
src/sensor_sync_py/: package.xml  setup.cfg  setup.py
(+4 files in other folders)
